    * A bug that caused disttools based python packages to be built as
      .egg files has been fixed.  This bug was introduced in conary
      0.94.
    * A bug that prevented checking in a recipe that deleted policy
      has been fixed.
    * A bug that prevented entitlements from being recognized by an
      Apache conary repository server when no username and password
      were set for a server

Changes in 1.0.1:
  o Database schema migration
    * Over time, the Conary system database schema has undergone
      several revisions.  Conary has done incremental schema
      migrations to bring old databases in line with the new schema as
      much as possible, but some remnants of the old schema remain.
      When Conary 1.0.1 runs for the first time, the database will be
      reloaded with a fresh schema.  This corrects errors that can
      occur due to incorrect SQL data types in table definitions.  An
      old copy of the database will be saved as "conarydb-pre-schema-update".

Changes in 1.0:
  o Bugfixes
    * A bug that allowed a group to be installed before children of
      its children were installed has been fixed.  This ensures this
      if a an update is partially completed, it can be restarted from
      where it left off.
    * A bug in python dependencies that sometimes resulted in a plain 
      python: __init__ dependency has been fixed.
    * A bug that dropped additional r.UtilizeUser matches for a file after
      the first one has been fixed.
    * Accessing a repository with the wrong server name no longer
      results in an Internal Server Error.  The error is marshaled
      back to the client.

Changes in 0.97.1:
  o Bugfixes
    * A bug has been fixed that allowed the "incomplete" flag to be
      unset in the database when applying changesets of troves that
      have no "incomplete" flag.  This resulted in "StopIteration"
      exceptions when updating the trove.