@@ -11,7 +11,12 @@ Changes in @NEW@:
       has been fixed.
     * A bug that prevented entitlements from being recognized by an
       Apache conary repository server when no username and password
-      were set for a server
+      were set for a server.
+    * A bug that prevented errors from being returned to the client
+      if it attempts to add an invalid entitlement key or has
+      insufficient permission to add the entitlement key.  An
+      InvalidEntitlement exception has been added.
+
 
 Changes in 1.0.1:
   o Database schema migration
